countdown.mariA avec corrections

--- a/index.html
+++ b/index.html
@@ -23,21 +23,52 @@
 			<div class="box2">
 				<p class="box_a">BEFORE CERTIFICATION</p>
 				<div class="box_b">
-					<div class="box_A"><span>2</span><span>1</span></div>
-					<div class="box_B"><span>0</span><span>3</span></div>
-					<div class="box_C"><span>2</span><span>0</span><span>2</span><span>1</span></div>
+
+					<div class="box_A"><img src="num_2.png" width="25px"><img src="num_2.png" width="25px"></div>
+
+					<div class="box_B"><img src="num_0.png" width="25px"><img src="num_3.png" width="25px"></div>
+
+					<div class="box_C"><img src="num_2.png" width="25px"><img src="num_0.png" width="25px"><img src="num_2.png" width="25px"><img src="num_1.png" width="25px"></div>
+
+				
 				</div>
 			</div>
-<!-- 		</div>
- -->
+
 		<div class="box3">
-			<p>D</p><p>E</p><p>V</p><br><p>W</p><p>E</p><p>B</p><br><p>C</p><p>O</p><p>D</p><p>E</p><p>U</p><p>S</p><p>E</p><p>S</p><br><p>N</p><p>A</p><p>N</p><p>T</p><p>E</p><p>S</p>
-		</div>
+			<ul>
+				<li>D</li>
+				<li>E</li>
+				<li>V</li>
+				<li></li>
+				<li>W</li>
+				<li>E</li>
+				<li>B</li>
+				<li></li>
+				<li>C</li>
+				<li>O</li>
+				<li>D</li>
+				<li>E</li>
+				<li>U</li>
+				<li>S</li>
+				<li>E</li>
+				<li>S</li>
+				<li></li>
+				<li>N</li>
+				<li>A</li>
+				<li>N</li>
+				<li>T</li>
+				<li>E</li>
+				<li>S</li>	
+			</ul>
+
+	<!--		<p>D</p><p>E</p><p>V</p><br><p>W</p><p>E</p><p>B</p><br><p>C</p><p>O</p><p>D</p><p>E</p><p>U</p><p>S</p><p>E</p><p>S</p><br><p>N</p><p>A</p><p>N</p><p>T</p><p>E</p><p>S</p>
+		-->
+		</div> 
 	</div>
 
 	<footer>
 		<p>Maria Mputu</p>
-		<img src="GITHUB_LogoBLANC.PNG" class="blanc" alt="GITHUB">
+		<img src="Github_LogoBLANC.png" class="blanc" alt="GITHUB">
 		<a href="RIAMA44.github.io">RIAMA44.github.io</a>
 	</footer>
 
